Oh, publish is not relative to base

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@
 
 [build]
   base    = "site"
-  publish = "output"
+  publish = "site/output"
   command = "nikola build"
 
 # # Production context: All deploys to the main
