fix missing quote

--- a/netlify.toml
+++ b/netlify.toml
@@ -22,7 +22,7 @@
 [context.deploy-preview.environment]
 #  ACCESS_TOKEN = "not so secret"
    NIKOLA_DEBUG = "1"
-   NIKOLA_SHOW_TRACEBACKS = "1'
+   NIKOLA_SHOW_TRACEBACKS = "1"
 # 
 # # Branch Deploy context: All deploys that are not in
 # # an active Deploy Preview will inherit these settings.
