--- a/talks2019.yaml
+++ b/talks2019.yaml
@@ -1,3 +1,6 @@
+days:
+- sat: "Saturday 15th June"
+- sun: "Sunday 16th June"
 tracks:
 - 1: "Track 1: Auditorium"
 - 2: "Track 2: Forum"
@@ -14,7 +17,7 @@ talks:
   speaker: AKSHAT SHARMA
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/48515/IMG_20180907_122310.jpeg
   title: Python made my dream come true
-  day: Sunday 16th June
+  day: sun
   track: 3
   time: "09:50"
   dur: "00:40"
@@ -29,7 +32,7 @@ talks:
   speaker: Alex Khaerov
   speakerimg: https://secure.gravatar.com/avatar/320f3b558c773592bba16c976d1b28d1?s=500
   title: Kill the mutants, protect your code!
-  day: Saturday 15th June
+  day: sat
   track: 2
   time: "16:10"
   dur: "00:40"
@@ -43,7 +46,7 @@ talks:
   speaker: Amir Arad
   speakerimg: https://secure.gravatar.com/avatar/7ebded1e9171acbf1b8cbf3532e25172?s=500
   title: 'From 0 to Awesome: How we got Python to supercharge our ML stack'
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "14:05"
   dur: "00:40"
@@ -58,7 +61,7 @@ talks:
   speaker: Andri Yadi
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/47721/RIOT_DSC1564_copy.JPG
   title: 'AIoT: Intelligence on Low Power Microcontroller, with MicroPython'
-  day: Sunday 16th June
+  day: sun
   track: 2
   time: "09:50"
   dur: "00:40"
@@ -98,7 +101,7 @@ talks:
   speakerimg: https://secure.gravatar.com/avatar/0233f28830fe1e51ae0b7783e5838db6?s=500
   title: 'Understanding and Implementing Generative Adversarial Networks (GANs): One
     of the BIGGEST Breakthroughs in the Deep Learning Revolution'
-  day: Saturday 15th June
+  day: sat
   track: 3
   time: "13:40"
   dur: "00:40"
@@ -114,7 +117,7 @@ talks:
   speaker: Anthony Khong
   speakerimg: https://secure.gravatar.com/avatar/62a12078cfba41bcd8d0886a7a7d3a20?s=500
   title: 'Functional Programming in Python: Lessons from Haskell and Clojure'
-  day: Sunday 16th June
+  day: sun
   track: 3
   time: "13:15"
   dur: "00:40"
@@ -132,7 +135,7 @@ talks:
   speaker: Avneet Kaur
   speakerimg: https://secure.gravatar.com/avatar/c4b633c794222b514d8881e5839da63a?s=500
   title: Demystifying Conversational AI with Python
-  day: Saturday 15th June
+  day: sat
   track: 3
   time: "11:10"
   dur: "00:40"
@@ -150,7 +153,7 @@ talks:
   speaker: Chanapai Chuadchum
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/45031/profile.jpg
   title: How to build an open source catbot with Python, a 3D printer and a microcontroller
-  day: Sunday 16th June
+  day: sun
   track: 3
   time: "15:45"
   dur: "00:40"
@@ -166,7 +169,7 @@ talks:
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/45031/profile.jpg
   title: 'How pyThaiNLP''s thai2fit Outperforms Google''s BERT: State-of-the-Art Thai
     Text Classification and Beyond'
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "13:40"
   dur: "00:40"
@@ -181,7 +184,7 @@ talks:
   speaker: Chie Hayashida
   speakerimg: https://secure.gravatar.com/avatar/7f7abff13e7c5ad15bfa3a823313ef9d?s=500
   title: Understanding of distributed processing in Python
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "13:15"
   dur: "00:40"
@@ -195,7 +198,7 @@ talks:
   speaker: Doni Rubiagatra
   speakerimg: https://secure.gravatar.com/avatar/eed0ef6cc8a0f435d5d8c9a5648f1551?s=500
   title: Interactive Python Dashboards with Plotly and Dash
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "10:20"
   dur: "00:40"
@@ -211,7 +214,7 @@ talks:
   speaker: Drishti Jain
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/36129/WhatsApp_Image_2019-04-21_at_8.52.00_PM.jpeg
   title: When life gives you Orange, make data speak volumes!
-  day: Saturday 15th June
+  day: sat
   track: 3
   time: "16:10"
   dur: "00:40"
@@ -228,7 +231,7 @@ talks:
   speaker: Elisha Tan
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/15327/elisha-speaker_copy.png
   title: Program Thinking - How do you design programs for diversity?
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "15:20"
   dur: "00:40"
@@ -244,7 +247,7 @@ talks:
   speaker: Harley Davidson Karel
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/28808/David.jpg
   title: Security Issues on your Python Code
-  day: Sunday 16th June
+  day: sun
   track: 2
   time: "10:40"
   dur: "00:40"
@@ -274,7 +277,7 @@ talks:
   speaker: Jiranun Jiratrakanvong
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/45206/7566C8EA-E7E2-4867-B79A-094534D151DA.jpeg
   title: Python for Data Science Projects at Coraline
-  day: Sunday 16th June
+  day: sun
   track: 2
   time: "13:15"
   dur: "00:40"
@@ -290,7 +293,7 @@ talks:
   speaker: Joe Chasinga
   speakerimg: https://secure.gravatar.com/avatar/c06b54277a2961c3e0f735aa0c8d85f9?s=500
   title: 'Marlin: A Smali to Python Transpiler for Android Hacking'
-  day: Saturday 15th June
+  day: sat
   track: 2
   time: "14:30"
   dur: "00:40"
@@ -303,7 +306,7 @@ talks:
   speaker: Jonghwa Seo
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/45418/pincoin-logo-A2.png
   title: E-commerce for Django
-  day: Saturday 15th June
+  day: sat
   track: 2
   time: "13:40"
   dur: "00:40"
@@ -318,7 +321,7 @@ talks:
   speaker: Jorge Torres
   speakerimg: https://secure.gravatar.com/avatar/03886c577a1c4d30efa531b8f85aa80f?s=500
   title: Machine Learning Democratization with Python
-  day: Saturday 15th June
+  day: sat
   track: 2
   time: "10:20"
   dur: "00:40"
@@ -334,7 +337,7 @@ talks:
   speakerimg: https://secure.gravatar.com/avatar/e412f3f4cb20c7070822a6faebf656d1?s=500
   title: Designing and Building Serverless Machine Learning-powered Applications with
     Python
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "12:00"
   dur: "00:40"
@@ -351,7 +354,7 @@ talks:
   speaker: Korakot Chaovavanich
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/25745/fullsizeoutput_b7.jpeg
   title: Advanced Google Colaboratory
-  day: Sunday 16th June
+  day: sun
   track: 2
   time: "15:20"
   dur: "00:40"
@@ -371,7 +374,7 @@ talks:
   speaker: Lina KATAYOSE(selina)
   speakerimg: https://secure.gravatar.com/avatar/442340722ced9c7c1bdf618ece413c69?s=500
   title: Pyladies and Importance of community participation
-  day: Sunday 16th June
+  day: sun
   track: 2
   time: "14:05"
   dur: "00:40"
@@ -398,7 +401,7 @@ talks:
   speaker: Manuel Riel
   speakerimg: https://secure.gravatar.com/avatar/24ba35029a2b10d0af542d213cfdaf3c?s=500
   title: Adding a GraphQL API to Django (with Vue.js frontend)
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "14:55"
   dur: "00:40"
@@ -413,7 +416,7 @@ talks:
   speaker: Mark Hollow
   speakerimg: https://secure.gravatar.com/avatar/1f9b0b1483c7edc284513caeefa40fb1?s=500
   title: Python in Production Engineering @ Facebook
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "16:10"
   dur: "00:40"
@@ -429,7 +432,7 @@ talks:
   speaker: Martin Andrews
   speakerimg: https://secure.gravatar.com/avatar/eedd4ff31246cafae4a8ebbf08260159?s=500
   title: 'First steps in Deep Learning with TensorFlow 2.0 : CNNs'
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "15:45"
   dur: "00:40"
@@ -444,7 +447,7 @@ talks:
   speaker: Md Shahbaz Alam
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/19104/mdsbzalam.jpg
   title: Securing your Python APIs with Auth0
-  day: Sunday 16th June
+  day: sun
   track: 3
   time: "10:40"
   dur: "00:40"
@@ -458,7 +461,7 @@ talks:
   speaker: Mishari Muqbil
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/27090/IMG-0002.JPG
   title: Teaching Coding To Kids
-  day: Sunday 16th June
+  day: sun
   track: 4
   time: "09:00"
   dur: "02:20"
@@ -481,7 +484,7 @@ talks:
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/27090/IMG-0002.JPG
   title: 'Unlocking the power of natural language by machine translation: how python
     could serve my purpose?'
-  day: Sunday 16th June
+  day: sun
   track: 2
   time: "14:55"
   dur: "00:40"
@@ -515,7 +518,7 @@ talks:
   speaker: Nithiroj Tripatarasit
   speakerimg: https://papercallio-production.s3.amazonaws.com/uploads/user/avatar/27090/IMG-0002.JPG
   title: Facial Keypoints Detection with PyTorch
-  day: Saturday 15th June
+  day: sat
   track: 3
   time: "15:20"
   dur: "00:40"
@@ -538,7 +541,7 @@ talks:
   speaker: Noah
   speakerimg: https://secure.gravatar.com/avatar/f84b4128e61163fad7751e4dd8ebac50?s=500
   title: Ready to say goodbye to Python 2.7 ! ?
-  day: Sunday 16th June
+  day: sun
   track: 3
   time: "09:00"
   dur: "00:40"
@@ -553,7 +556,7 @@ talks:
   speaker: Noah Kantrowitz
   speakerimg: https://secure.gravatar.com/avatar/cf611565f0b79abd0b3dc200ad867661?s=500
   title: 'Forklifting Django: Migrating A Complex Django App To Kubernetes'
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "10:40"
   dur: "00:40"
@@ -567,7 +570,7 @@ talks:
   speaker: Pisuth Daengthongdee
   speakerimg: https://secure.gravatar.com/avatar/02db6091a997dc75b39fddfe6a740494?s=500
   title: Raiden Network for instant crypto payment & lower fees
-  day: Saturday 15th June
+  day: sat
   track: 2
   time: "11:10"
   dur: "00:40"
@@ -583,7 +586,7 @@ talks:
   speakerimg: https://secure.gravatar.com/avatar/02ef5c925c1e92968925675e253a72cc?s=500
   title: Fuzzy Multi-Criteria Portfolio Optimisation with Python (and maybe a little
     bit of Mathematica)
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "09:00"
   dur: "00:40"
@@ -600,7 +603,7 @@ talks:
   speaker: Rae Knowler
   speakerimg: https://secure.gravatar.com/avatar/843df29a0383ee0094a5caa2defd8707?s=500
   title: 'Hypothesis: Property-Based Testing for Python'
-  day: Sunday 16th June
+  day: sun
   track: 3
   time: "14:05"
   dur: "00:40"
@@ -622,7 +625,7 @@ talks:
   speaker: Rahul Bhatia
   speakerimg: https://secure.gravatar.com/avatar/e16d4591c7f44180024093015eec7512?s=500
   title: Visualize the Black Box - An introduction to Interpretable Machine Learning
-  day: Sunday 16th June
+  day: sun
   track: 4
   time: "13:15"
   dur: "02:20"
@@ -642,7 +645,7 @@ talks:
   speaker: Robert Owen
   speakerimg: https://secure.gravatar.com/avatar/3bd96a0518aafe7632c76cccabc3501d?s=500
   title: The Buzz about Bees
-  day: Saturday 15th June
+  day: sat
   track: 2
   time: "12:00"
   dur: "00:40"
@@ -665,7 +668,7 @@ talks:
   speaker: Sam Witteveen
   speakerimg: https://secure.gravatar.com/avatar/02da2ef8a441965087137c2691e39d34?s=500
   title: The Fastest Path to Deep Learning
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "09:50"
   dur: "00:40"
@@ -676,7 +679,7 @@ talks:
     Colab outlining the basics of Deep Learning and building models.
   speaker: Sam Witteveen + Martin Andrews
   title: Deep Learning Introductory Workshop with TensorFlow 2.0
-  day: Saturday 15th June
+  day: sat
   track: 4
   time: "13:40"
   dur: "02:20"
@@ -692,7 +695,7 @@ talks:
   speaker: Sara Iris Garcia
   speakerimg: https://secure.gravatar.com/avatar/da7607390ad88d1592247079d2381321?s=500
   title: Addressing class imbalance in Machine Learning
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "14:05"
   dur: "00:40"
@@ -717,7 +720,7 @@ talks:
   speaker: Sarthak Deshwal
   speakerimg: https://secure.gravatar.com/avatar/ebb0ce50f3e93125e7f5fe4406a78723?s=500
   title: A resilient, scalable tracing and analysis system for micro-services - HayStack
-  day: Sunday 16th June
+  day: sun
   track: 3
   time: "14:55"
   dur: "00:40"
@@ -738,7 +741,7 @@ talks:
   speaker: Sherin Thomas
   speakerimg: https://secure.gravatar.com/avatar/c32e9a85da547a9e816d5ff6696957e8?s=500
   title: Production-ize deep learning with PyTorch, RedisAI and Hangar
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "11:10"
   dur: "00:40"
@@ -755,7 +758,7 @@ talks:
   speaker: Sudarat Chattanon
   speakerimg: https://secure.gravatar.com/avatar/7300910aa33d37a8a78a64270f6283b0?s=500
   title: Python for beginners
-  day: Saturday 15th June
+  day: sat
   track: 4
   time: "10:20"
   dur: "02:20"
@@ -775,7 +778,7 @@ talks:
   speaker: TUSHAR BANSAL
   speakerimg: https://secure.gravatar.com/avatar/702e5bb554b9e0dbcf2412f9d8929aa2?s=500
   title: Developing Natural Language Processing Applications Using Python
-  day: Sunday 16th June
+  day: sun
   track: 2
   time: "09:00"
   dur: "00:40"
@@ -799,7 +802,7 @@ talks:
   speaker: Takanori Suzuki
   speakerimg: https://secure.gravatar.com/avatar/5d9cabab536050d85bfa0df9daf856d1?s=500
   title: Automate the Boring Stuff with Slackbot
-  day: Saturday 15th June
+  day: sat
   track: 3
   time: "12:00"
   dur: "00:40"
@@ -823,7 +826,7 @@ talks:
   speaker: Tilak T
   speakerimg: https://secure.gravatar.com/avatar/3852521603c21de17cdab3adf97ac91a?s=500
   title: Unique ways to Hack into a Python Web Service
-  day: Saturday 15th June
+  day: sat
   track: 3
   time: "10:20"
   dur: "00:40"
@@ -848,7 +851,7 @@ talks:
   speaker: Viral Parmar
   speakerimg: https://secure.gravatar.com/avatar/f39b54f90f14174754a7a1671cc8b008?s=500
   title: JWT authentication with Django
-  day: Saturday 15th June
+  day: sat
   track: 3
   time: "12:30"
   dur: "00:40"
@@ -868,7 +871,7 @@ talks:
   speaker: Zsolt Dollenstein
   speakerimg: https://secure.gravatar.com/avatar/c64a6a9dfd72d4d6fe680f9cfbf46f58?s=500
   title: Any Code Formatter You Like - As Long As It's Black
-  day: Sunday 16th June
+  day: sun
   track: 2
   time: "15:45"
   dur: "00:40"
@@ -880,7 +883,7 @@ talks:
   speaker: Signup
   speakerimg:
   title: Lightning Talks
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "17:00"
   dur: "00:45"
@@ -892,7 +895,7 @@ talks:
   speaker: Signup
   speakerimg:
   title: Lightning Talks
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "16:35"
   dur: "01:00"
@@ -904,7 +907,7 @@ talks:
   speaker: Ginger Farm
   speakerimg:
   title: Lunch
-  day: Saturday 15th June
+  day: sat
   track:
   time: "12:40"
   dur: "01:00"
@@ -916,7 +919,7 @@ talks:
   speaker: Ginger Farm
   speakerimg:
   title: Lunch
-  day: Sunday 16th June
+  day: sun
   track:
   time: "12:15"
   dur: "01:00"
@@ -928,7 +931,7 @@ talks:
   speaker: ...
   speakerimg:
   title: Morning Tea & Coffee
-  day: Saturday 15th June
+  day: sat
   track:
   time: "09:50"
   dur: "00:30"
@@ -943,21 +946,21 @@ talks:
   bio: |-
     Catered by ...
   speakerimg:
-  day: Saturday 15th June
+  day: sat
   track:
   time: "07:30"
   dur: "01:10"
 
 - title: Registration and Welcome Coffee
   description: level 6
-  day: Saturday 15th June
+  day: sat
   track:
   time: "8:00"
   dur: "00:55"
 
 - title: Welcome Speeches
   description: Some words to open PyCon Thailand 2019
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "8:55"
   dur: "00:10"
@@ -978,7 +981,7 @@ talks:
     the interface between cutting-edge research and product development. Beyond his work at Cogent Labs, David is also
     well known in the open source community as the original author of scikit-learn, and a major contributor to NumPy
     and SciPy.
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "09:05"
   dur: "00:45"
@@ -990,7 +993,7 @@ talks:
     experience working with large organizations like Facebook AI Research and NVIDIA. Currently, he pursues two majors
     — Computer Science and Mathematics — at the University of Warsaw. His general interests include graph theory,
     programming languages, algorithmics and machine learning.
-  day: Saturday 15th June
+  day: sat
   track: 1
   time: "17:45"
   dur: "00:45"
@@ -1009,13 +1012,13 @@ talks:
     at PYCON THAILAND 2019!
 
     "Party will take place from 6:30pm to 9:00pm on Level 6 and is included in the price of your conference ticket."
-  day: Saturday 15th June
+  day: sat
   track:
   time: "16:30"
   dur: "02:30"
 
 - title: Registration / Welcome Coffee
-  day: Sunday 16th June
+  day: sun
   track:
   time: "08:00"
   dur: "01:00"
@@ -1032,7 +1035,7 @@ talks:
     He is a frequent speaker at Python and Django conferences around the globe, sharing his experiences as a FLOSS
     developer, community maintainer, and (unsuccessful) startup founder. He lives in Whadjuk Noongar country -
     otherwise known as Perth, Western Australia.
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "11:30"
   dur: "00:45"
@@ -1051,7 +1054,7 @@ talks:
 
     When she’s not changing the world, she enjoys cooking, making tapestries, and seeing just how well various
     application stacks handle emoji.
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "17:45"
   dur: "00:45"
@@ -1060,7 +1063,7 @@ talks:
   speaker: PyCon Thailand Team
   description: A few words to wrap up what was an amazing event and thank everyone who worked so hard to make it happen
   bio:
-  day: Sunday 16th June
+  day: sun
   track: 1
   time: "18:20"
   dur: "00:10"
