--- a/talks2019.yaml
+++ b/talks2019.yaml
@@ -887,7 +887,7 @@ talks:
     current tech skills market in Thailand, and which web development skills are most in demand now.  We’ll see how
     Python compares to other languages, and what future prospects might be for Python Developers.
   speaker: Shane Torr
-  title: Tech Skills: What's Hot and Whats Not. How does Python stack-up against the rest?
+  title: "Tech Skills: What's Hot and Whats Not. How does Python stack-up against the rest?"
   day: sat
   track: 3
   time: "14:30"
